feat: enhance API test suite with structured reporting and custom validations - Implement @allure.step decorators for granular test execution tracking - Develop custom assertion logic for domain-specific response validation - Improve test readability and failure diagnosis with structured steps - Add meaningful labels and descriptions to key test operations - Enhance reporting clarity in Allure dashboard

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pytest-booker-platform-api"
+description = "API Test Automation Framework for the RESTful Booker Platform. Built with Python, Pytest, HTTPX, and Pydantic. Features Dockerized execution, CI/CD with GitHub Actions, Allure reports, and API contract validation."
+keywords = ["aqa", "automation", "api-testing", "restful-booker-platform", "microservices", "pytest", "allure", "swagger-coverage-tool"]
 version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
