add button home

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -61,9 +61,7 @@ jobs:
           cd docs/zudoku
           python scripts/fix-openapi-servers.py
           python scripts/generate-zudoku-config.py
-          ls -la apis/
-          echo "--- _apis.json preview ---"
-          head -50 apis/_apis.json
+          
 
       - name: Set up Node.js
         uses: actions/setup-node@v6
@@ -85,10 +83,6 @@ jobs:
       - name: Flatten dist structure
         run: |
           cd docs/zudoku
-          echo "📁 Before flattening:"
-          find . -path "*/dist/*" -type d | head -10
-
-          # Перемещаем содержимое вложенной папки на уровень выше
           if [ -d "dist/pytest-booker-platform-api/zudoku-doc" ]; then
             mv dist/pytest-booker-platform-api/zudoku-doc/* dist/ 2>/dev/null || true
             mv dist/pytest-booker-platform-api/zudoku-doc/.* dist/ 2>/dev/null || true
@@ -98,8 +92,6 @@ jobs:
             echo "⚠️ No nested structure found — skipping"
           fi
 
-          echo "📁 After flattening:"
-          ls -la dist/
 
       - name: Upload Zudoku documentation
         if: always()
@@ -132,12 +124,6 @@ jobs:
           path: gh-pages-output
           fetch-depth: 0
 
-      - name: Delete old dir
-        run: |
-          rm -rf gh-pages-output/zudoku-doc
-          echo "✅ Удалил старые папки"
-          ls -la
-
       - name: Download Zudoku documentation
         uses: actions/download-artifact@v7
         with:
@@ -145,21 +131,14 @@ jobs:
           path: gh-pages-output/zudoku-doc
 
 
-      - name: Check dir
-        run: |
-          echo "✅ перед диплоем"
-          ls -la
-          echo "✅ *******************************"
-          ls -la gh-pages-output
-
       - name: Inject Documentation link into existing index.html
         run: |
           INDEX_FILE="gh-pages-output/index.html"
 
           if grep -q "zudoku-doc" "$INDEX_FILE"; then
-            echo "✅ Documentation link already exists, skipping."
+            echo "Documentation link already exists, skipping."
           else
-            echo "🔧 Adding Documentation link to index.html"
+            echo "Adding Documentation link to index.html"
             sed -i 's|</ul>|    <li>📚 <a href="zudoku-doc/">Documentation</a></li>\n    </ul>|' "$INDEX_FILE"
           fi
 
